data/derived/fa15/progs/unify/prog3680.ml.out
Characters 82-84:
  bigAdd a2 (mulByDigit (x l1) 10**a1) 
                               ^^
Error: This expression has type int but an expression was expected of type
         int list
